# cliptunnel

./: .gitignore  .mise.toml  AGENTS.md  Cargo.toml  README.md  TESTING.md  deny.toml  hk.pkl  install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
shims/: _common.sh  wl-paste.sh  xclip.sh  xsel.sh
src/: cli.rs  config.rs  disconnect.rs  doctor.rs  lib.rs  main.rs  paste.rs  setup.rs  tunnel.rs
src/connect/: deploy.rs  mod.rs  ssh_config.rs
src/daemon/: clipboard.rs  launchd.rs  mod.rs  server.rs
src/remote/: gc.rs  install.rs  mod.rs  shims.rs  x11_bridge.rs
tests/: daemon_test.rs
tests/e2e/: test_full_flow.sh
